--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ classifiers=
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
+  Programming Language :: Python :: 3.11
 long_description = file: README.md
 long_description_content_type = text/markdown
 
