--- a/setup.cfg
+++ b/setup.cfg
@@ -23,10 +23,8 @@ install_requires =
 
 [options.extras_require]
 dev =
-  black
-  isort
   mypy
-  pylint
+  ruff
   boto3-stubs[lambda]
 
 test =
