--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ dependencies = [
 readme = "README.md"
 requires-python = ">=3.9"
 
-[project.optional-dependencies]
-dev = [
+[dependency-groups]
+lint = [
     "mypy",
     "ruff",
     "boto3-stubs[lambda]",
